i18n update from Transifex

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ast.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ast.properties
@@ -39,6 +39,12 @@ de-AT = Alem\u00e1n austriacu
 
 de-CH = Alem\u00e1n suizu
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (desactivar)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Regles desactivaes - calca p'activar otra vuelta\:
+
 desc_comma_whitespace = Espaciu enantes de coma y enantes/depu\u00e9s de par\u00e9ntesis
 
 desc_double_punct = Usu de dos puntos o comes sigu\u00edos
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Comprueba qu'una frase entame con may\u00fascules
 desc_whitespacerepetition = Repetici\u00f3n d'espacios
 
 desc_spelling = Posible fallu d'ortograf\u00eda
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Fallu d'ortograf\u00eda
 
@@ -250,3 +258,5 @@ pt-PT = Portugu\u00e9s (Portugal)
 guiWarning = Avisu
 
 guiDuplicate = \u00a1Ficheru de regles duplic\u00e1u\!
+
+ja = Xapon\u00e9s
