--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
@@ -39,6 +39,12 @@ de-AT = alemany (austr\u00edac)
 
 de-CH = alemany (su\u00eds)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Espais abans de coma i abans i despr\u00e9s dels par\u00e8ntesis
 
 desc_double_punct = Dos punts o dues comes consecutives
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Comproveu que la frase comen\u00e7a amb maj\u00fascula
 desc_whitespacerepetition = Repetici\u00f3 d'espais en blanc (formataci\u00f3 incorrecta)
 
 desc_spelling = Possible error ortogr\u00e0fic
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Error ortogr\u00e0fic
 
@@ -250,3 +258,5 @@ pt-PT = portugu\u00e8s (Portugal)
 guiWarning = Av\u00eds
 
 guiDuplicate = Fitxer de regles duplicat\!
+
+# ja = Japanese
