--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
@@ -39,6 +39,12 @@ de = N\u011bmecky
 
 # de-CH = German (Swiss)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Pou\u017eit\u00ed mezery p\u0159ed \u010d\u00e1rkou a p\u0159ed/za z\u00e1vorkami
 
 desc_double_punct = Pou\u017eit\u00ed dvou za sebou jdouc\u00edch \u010d\u00e1rek nebo te\u010dek
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Zkontroluje zda v\u011bta za\u010d\u00edn\u00e1 velk\u
 desc_whitespacerepetition = Opakov\u00e1n\u00ed mezery(\u0161patn\u00e9 form\u00e1tov\u00e1n\u00ed)
 
 # desc_spelling = Possible spelling mistake
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 # desc_spelling_short = Spelling mistake
 
@@ -250,3 +258,5 @@ ro = Rumunsky
 # guiWarning = Warning
 
 # guiDuplicate = Duplicate rule file\!
+
+# ja = Japanese
