--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
@@ -39,6 +39,12 @@ de-AT = Tysk (\u00d8strig)
 
 de-CH = Tysk (Schweiz)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (deaktiver)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Deaktiverede regler - klik for at aktivere igen\:
+
 desc_comma_whitespace = Mellemrum f\u00f8r komma og f\u00f8r/efter parenteser
 
 desc_double_punct = To p\u00e5 hinanden f\u00f8lgende punktummer eller kommaer
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Kontroller at s\u00e6tningen starter med et stort begy
 desc_whitespacerepetition = Gentagende mellemrum (d\u00e5rlig formatering)
 
 desc_spelling = Mulig stavefejl
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Stavefejl
 
@@ -250,3 +258,5 @@ pt-PT = Portugisisk (Portugal)
 guiWarning = Advarsel
 
 guiDuplicate = Dublet af regelfil\!
+
+ja = Japansk
