--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
@@ -39,6 +39,12 @@ de-AT = Deutsch (\u00d6sterreich)
 
 de-CH = Deutsch (Schweiz)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Leerzeichen vor/hinter Kommas und Klammern
 
 desc_double_punct = Zwei aufeinanderfolgende Kommas oder Punkte
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Gro\u00dfschreibung am Satzanfang
 desc_whitespacerepetition = Wiederholung von Leerzeichen
 
 desc_spelling = M\u00f6glicher Rechtschreibfehler
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Rechtschreibfehler
 
@@ -250,3 +258,5 @@ pt-PT = Portugiesisch (Portugal)
 guiWarning = Warnung
 
 guiDuplicate = Doppelte Regel-Datei\!
+
+# ja = Japanese
