--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_el_GR.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_el_GR.properties
@@ -39,6 +39,12 @@ de-AT = \u0393\u03b5\u03c1\u03bc\u03b1\u03bd\u03b9\u03ba\u03ac (\u0391\u03c5\u03
 
 de-CH = \u0393\u03b5\u03c1\u03bc\u03b1\u03bd\u03b9\u03ba\u03ac (\u03a3\u03bf\u03c5\u03b7\u03b4\u03af\u03b1\u03c2)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (\u03b1\u03c0\u03b5\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>\u0391\u03c0\u03b5\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\u03b7\u03bc\u03ad\u03bd\u03bf\u03b9 \u03ba\u03b1\u03bd\u03cc\u03bd\u03b5\u03c2 - \u03ba\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03c4\u03bf\u03c5\u03c2 \u03b5\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03c4\u03b5 \u03be\u03b1\u03bd\u03ac\:
+
 desc_comma_whitespace = \u03a7\u03c1\u03ae\u03c3\u03b7 \u03ba\u03b5\u03bd\u03bf\u03cd \u03c0\u03c1\u03b9\u03bd \u03b1\u03c0\u03cc \u03ba\u03cc\u03bc\u03bc\u03b1 \u03ba\u03b1\u03b9 \u03c0\u03c1\u03af\u03bd/\u03bc\u03b5\u03c4\u03ac \u03b1\u03c0\u03cc \u03c0\u03b1\u03c1\u03ad\u03bd\u03b8\u03b5\u03c3\u03b7
 
 desc_double_punct = \u03a7\u03c1\u03ae\u03c3\u03b7 \u03b4\u03cd\u03bf \u03c3\u03c5\u03bd\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd \u03ba\u03bf\u03bc\u03bc\u03ac\u03c4\u03c9\u03bd \u03ae \u03c4\u03b5\u03bb\u03b5\u03b9\u03ce\u03bd
@@ -62,6 +68,8 @@ desc_uppercase_sentence = \u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03c0\u03c
 desc_whitespacerepetition = \u0395\u03c0\u03b1\u03bd\u03ac\u03bb\u03b7\u03c8\u03b7 \u03ba\u03b5\u03bd\u03bf\u03cd
 
 desc_spelling = \u03a0\u03b9\u03b8\u03b1\u03bd\u03cc \u03bf\u03c1\u03b8\u03bf\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = \u039f\u03c1\u03b8\u03bf\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2
 
@@ -117,7 +125,7 @@ guiCloseButton=\u039a\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf
 
 guiConfigWindowTitle = \u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 LanguageTool
 
-guiDemoText = \u0391\u03c5\u03c4\u03cc \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03bd\u03b1 \u03c0\u03b1\u03c1\u03ac\u03b4\u03b5\u03b9\u03b3\u03bc\u03b1 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03c3\u03b1\u03c2 \u03b4\u03b5\u03af\u03c4\u03b5 \u03c0\u03ce\u03c2 \u03bb\u03b5\u03b9\u03c4\u03bf\u03c5\u03c1\u03b3\u03b5\u03af \u03c4\u03bf LanguageTool.
+guiDemoText = \u0391\u03c5\u03c4\u03cc \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03bd\u03b1 \u03c0\u03b1\u03c1\u03ac\u03b4\u03b5\u03b9\u03b3\u03bc\u03b1 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b4\u03b5\u03af\u03c4\u03b5 \u03c0\u03ce\u03c2 \u03bb\u03b5\u03b9\u03c4\u03bf\u03c5\u03c1\u03b3\u03b5\u03af \u03c4\u03bf LanguageTool.
 guiLanguageManagerDialog=\u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u03ae\u03c2 \u0391\u03c1\u03b8\u03c1\u03c9\u03bc\u03ac\u03c4\u03c9\u03bd \u0393\u03bb\u03ce\u03c3\u03c3\u03b1\u03c2
 
 guiMatchCount = \u03a0\u03b9\u03b8\u03b1\u03bd\u03ac \u03bb\u03ac\u03b8\u03b7\:
@@ -250,3 +258,5 @@ pt-PT = \u03a0\u03bf\u03c1\u03c4\u03bf\u03b3\u03b1\u03bb\u03b9\u03ba\u03ac (\u03
 guiWarning = \u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7
 
 guiDuplicate = \u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03ba\u03b1\u03bd\u03cc\u03bd\u03c9\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03ae\u03b4\u03b7 \u03c6\u03bf\u03c1\u03c4\u03c9\u03bc\u03ad\u03bd\u03bf\!
+
+ja = \u0399\u03b1\u03c0\u03c9\u03bd\u03b9\u03ba\u03ac
