--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
@@ -39,6 +39,12 @@ de-AT = Germana (A\u016dstrio)
 
 de-CH = Germana (Svislando)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (mal\u015dalti)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Mal\u015daltitaj reguloj - alklaki por re\u015dalti\:
+
 desc_comma_whitespace = Uzo de spaceto anta\u016d komo kaj anta\u016d/malanta\u016d krampoj
 
 desc_double_punct = Uzo de sinsekvaj punktoj a\u016d komoj
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Kontrolas, \u0109u frazo komenci\u011das per majuskla 
 desc_whitespacerepetition = Ripetita spaceto (ne\u011dusta formato)
 
 desc_spelling = Ebla mistajpa\u0135o
+
+desc_spelling_no_suggestions = Ebla misliterumo (sen sugesto)
 
 desc_spelling_short = Mistajpa\u0135o
 
@@ -250,3 +258,5 @@ pt-PT = Portugala (Portugalio)
 guiWarning = Averto
 
 guiDuplicate = Duobla dosiero de reguloj\!
+
+ja = Japana
