--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
@@ -39,6 +39,12 @@ de-AT = Allemand (Autrichien)
 
 de-CH = Allemand (Suisse)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (d\u00e9sactiver)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>R\u00e8gles d\u00e9sactiv\u00e9es - cliquer pour activer \u00e0 nouveau\u00a0\:
+
 desc_comma_whitespace = Espace devant \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb ou apr\u00e8s \u00ab\u00a0(\u00a0\u00bb
 
 desc_double_punct = Deux virgules ou points cons\u00e9cutifs
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Absence de majuscule en d\u00e9but de phrase
 desc_whitespacerepetition = Plusieurs espaces blanches (mauvais format)
 
 desc_spelling = Faute de frappe possible
+
+desc_spelling_no_suggestions = Faute d'orthographe possible (sans suggestions)
 
 desc_spelling_short = Faute de frappe
 
@@ -250,3 +258,5 @@ pt-PT = Portuguais (Portugal)
 guiWarning = Avertissement
 
 guiDuplicate = Fichier de r\u00e8gles dupliqu\u00e9
+
+ja = Japonais
