--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
@@ -39,6 +39,12 @@ de-AT = Alem\u00e1n (austr\u00edaco)
 
 de-CH = Alem\u00e1n (su\u00edzo)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (desactivar)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Regras desactivadas - faga clic para volvelas activar\:
+
 desc_comma_whitespace = Uso de espazos en branco diante dunha coma ou antes/despois de par\u00e9ntese
 
 desc_double_punct = Uso de dous puntos ou comas consecutivos
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Comproba que unha oraci\u00f3n comece con mai\u00fascu
 desc_whitespacerepetition = M\u00faltiples espazos en branco (erro de formato)
 
 desc_spelling = Pos\u00edbel erro ortogr\u00e1fico
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Erro ortogr\u00e1fico
 
@@ -250,3 +258,5 @@ pt-PT = Portugu\u00e9s (Portugal)
 guiWarning = Atenci\u00f3n
 
 guiDuplicate = Ficheiro de regras duplicado\!
+
+ja = Xapon\u00e9s
