--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
@@ -39,6 +39,12 @@ de = \u00fe\u00fdska
 
 # de-CH = German (Swiss)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Bil \u00e1 undan kommu og \u00e1 undan/eftir sviga
 
 desc_double_punct = Tv\u00edtekinn punktur e\u00f0a komma
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Athuga hvort setning hefst \u00e1 st\u00f3rum staf
 desc_whitespacerepetition = Tv\u00f6falt bil (galli \u00e1 uppsetningu)
 
 # desc_spelling = Possible spelling mistake
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 # desc_spelling_short = Spelling mistake
 
@@ -250,3 +258,5 @@ whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 # guiWarning = Warning
 
 # guiDuplicate = Duplicate rule file\!
+
+# ja = Japanese
