--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
@@ -39,6 +39,12 @@ de-AT = Tedesco (Austriaco)
 
 de-CH = Tedesco (Svizzero)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Utilizzo dello spazio prima della virgola e prima/dopo le parentesi
 
 desc_double_punct = Doppia battitura di punti o di virgole
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Controlla che la frase inizi con una maiuscola
 desc_whitespacerepetition = Ripetizione dello spazio (brutta formattazione)
 
 desc_spelling = Probabile errore di battitura
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Errore di battitura
 
@@ -250,3 +258,5 @@ pt-PT = Portoghese (Portogallo)
 guiWarning = Avvertenza
 
 guiDuplicate = File di regole duplicato\!
+
+# ja = Japanese
