--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
@@ -39,6 +39,12 @@ de = vokie\u010di\u0173
 
 # de-CH = German (Swiss)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Tarp\u0173 naudojimas prie\u0161/po kablel\u012f bei skliaustelius
 
 desc_double_punct = Ar n\u0117ra dviej\u0173 pasikartojan\u010di\u0173 ta\u0161k\u0173 ar kableli\u0173
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios 
 # desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
 # desc_spelling = Possible spelling mistake
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 # desc_spelling_short = Spelling mistake
 
@@ -250,3 +258,5 @@ ro = Rom\u00e2n\u0103
 # guiWarning = Warning
 
 # guiDuplicate = Duplicate rule file\!
+
+# ja = Japanese
