--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
@@ -39,6 +39,12 @@ de-AT = Duits (Oostenrijk)
 
 de-CH = Duits (Zwitserland)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Spatie voor of achter haakje
 
 desc_double_punct = Twee komma's of punten
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Controleert of een zin begint met een hoofdletter
 desc_whitespacerepetition = Te veel witruimte tussen woorden
 
 desc_spelling = Waarschijnlijk een spelfout
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Spelling onjuist
 
@@ -250,3 +258,5 @@ pt-PT = Portugees (Portugal)
 guiWarning = Waarschuwing
 
 guiDuplicate = Bestand met regels is al geladen
+
+# ja = Japanese
