--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
@@ -33,11 +33,17 @@ da = D\u00e1nsky
 
 de = Nemecky
 
-# de-DE = German (Germany)
+de-DE = Nemecky (Nemecko)
 
-# de-AT = German (Austrian)
+de-AT = Nemecky (Rak\u00fasko)
 
-# de-CH = German (Swiss)
+de-CH = Nemecky (\u0160vaj\u010diarsko)
+
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
 
 desc_comma_whitespace = Pou\u017eitie medzery pred \u010diarkou a pred/za z\u00e1tvorkami
 
@@ -61,29 +67,31 @@ desc_uppercase_sentence = Skontrolujte, \u010di veta za\u010d\u00edna ve\u013ek\
 
 desc_whitespacerepetition = Opakovanie "bielych znakov" napr. medzier (zl\u00e9 form\u00e1tovanie)
 
-# desc_spelling = Possible spelling mistake
+desc_spelling = Pravdepodobne preklep
 
-# desc_spelling_short = Spelling mistake
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+
+desc_spelling_short = Preklep
 
 double_dots_short = Dve za sebou id\u00face bodky
 
 double_commas_short = Dve za sebou id\u00face \u010diarky
 
-# el = Greek
+el = Gr\u00e9cky
 
 en = Anglicky
 
-# en-AU = English (Australian)
+en-AU = Anglicky (Austr\u00e1lia)
 
-# en-GB = English (British)
+en-GB = Anglicky (Ve\u013ek\u00e1 Brit\u00e1nia)
 
-# en-US = English (American)
+en-US = Anglicky (USA)
 
-# en-CA = English (Canadian)
+en-CA = Anglicky (Kanada)
 
-# en-NZ = English (New Zealand)
+en-NZ = Anglicky (Nov\u00fd Z\u00e9land)
 
-# en-ZA = English (South African)
+en-ZA = Anglicky (Ju\u017en\u00e1 Afrika)
 
 enterText = Vlo\u017ete alebo nap\u00ed\u0161te text, ktor\u00fd chcete skontrolova\u0165 do hornej \u010dasti
 
@@ -213,7 +221,7 @@ sl = Slovinsky
 
 space_after_comma = Vlo\u017ei\u0165 medzeru za \u010diarku, ale nie pred \u010diarku
 
-# spelling = Possible spelling mistake found
+spelling = N\u00e1jden\u00fd pravdepodobn\u00fd preklep
 
 startChecking = Za\u010diatok kontroly po {0}
 
@@ -231,7 +239,7 @@ uk = Ukrajinsky
 
 unpaired_brackets = Nevyp\u00e1rovan\u00e9 z\u00e1tvorky alebo podobn\u00fd symbol
 
-# useGUIConfig = Use above settings for the server
+useGUIConfig = Pou\u017ei\u0165 vy\u0161\u0161ie uveden\u00e9 nastavenia servera
 
 whitespace_repetition = Mo\u017en\u00fd preklep\: zopakovali ste "biely znak" (whitespace)
 
@@ -239,14 +247,16 @@ ro = Rumunsky
 
 zh = \u010c\u00ednsky
 
-# moreInfo = More info\:
+moreInfo = Viac inform\u00e1ci\u00ed
 
-# pt = Portuguese
+pt = Portugalsky
 
-# pt-BR = Portuguese (Brazil)
+pt-BR = Portugalsky (Braz\u00edlia)
 
-# pt-PT = Portuguese (Portugal) 
+pt-PT = Portugalsky (Portugalsko)
 
-# guiWarning = Warning
+guiWarning = Varovanie
 
-# guiDuplicate = Duplicate rule file\!
+guiDuplicate = Duplicitn\u00fd s\u00fabor pravidiel\!
+
+# ja = Japanese
