--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
@@ -39,6 +39,12 @@ de = Tyska
 
 # de-CH = German (Swiss)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Anv\u00e4ndande av blanksteg f\u00f6re kommatecken eller f\u00f6re/efter parentes
 
 desc_double_punct = Anv\u00e4ndande av dubbla punkter eller kommatecken
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Kontrollera att meningar b\u00f6rjar med stor bokstav
 desc_whitespacerepetition = Upprepade mellanslag (d\u00e5lig formateringsvana)
 
 # desc_spelling = Possible spelling mistake
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 # desc_spelling_short = Spelling mistake
 
@@ -250,3 +258,5 @@ ro = Rom\u00e2n\u0103
 # guiWarning = Warning
 
 # guiDuplicate = Duplicate rule file\!
+
+# ja = Japanese
