--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
@@ -39,6 +39,12 @@ de-AT = German (Austrian)
 
 de-CH = German (Swiss)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
 desc_double_punct = Use of two consecutive dots or commas
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
 desc_spelling = Possible spelling mistake
+
+desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Spelling mistake
 
@@ -250,3 +258,5 @@ pt-PT = Portuguese (Portugal)
 guiWarning = Warning
 
 guiDuplicate = Duplicate rule file\!
+
+ja = Japanese
