--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
@@ -39,6 +39,12 @@ de-AT = \u5fb7\u8bed(\u5965\u5730\u5229)
 
 de-CH = \u5fb7\u8bed(\u745e\u58eb)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = \u5728\u9017\u53f7\u524d\u548c\u62ec\u53f7\u524d/\u540e\u4f7f\u7528\u7a7a\u683c
 
 desc_double_punct = \u4f7f\u7528\u4e24\u4e2a\u8fde\u7eed\u7684\u53e5\u53f7\u6216\u9017\u53f7
@@ -62,6 +68,8 @@ desc_uppercase_sentence = \u68c0\u67e5\u4e00\u4e2a\u4ee5\u5927\u5199\u5b57\u6bcd
 desc_whitespacerepetition = \u7a7a\u683c\u91cd\u590d(\u9519\u8bef\u7684\u683c\u5f0f)
 
 desc_spelling = \u53ef\u80fd\u7684\u62fc\u5199\u9519\u8bef
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = \u62fc\u5199\u9519\u8bef
 
@@ -250,3 +258,5 @@ pt-PT = \u8461\u8404\u7259\u8bed(\u8461\u8404\u7259)
 guiWarning = \u8b66\u544a
 
 guiDuplicate = \u91cd\u590d\u89c4\u5219\u6587\u4ef6\!
+
+# ja = Japanese
