--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
@@ -39,6 +39,12 @@ de-AT = Alamaneg (Aostria)
 
 de-CH = Alamaneg (Suis)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Esaouenn dirak \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb pe goude \u00ab\u00a0(\u00a0\u00bb
 
 desc_double_punct = Meur a skej pe bik diouzh renk
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Pennlizherenn e dero\u00f9 ur frazenn
 desc_whitespacerepetition = Meur a esaouenn wenn (furmad fall)
 
 desc_spelling = Ur fazi reizhskriva\u00f1 a c'hall beza\u00f1
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Fazi reizhskriva\u00f1
 
@@ -250,3 +258,5 @@ pt-PT = Portugaleg (Portugal)
 guiWarning = Diwallit
 
 guiDuplicate = Restr reolenno\u00f9 eilet \!
+
+ja = Japaneg
