--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -21,11 +21,11 @@ category_misc = Miscellaneous
 
 category_typo = Possible Typo
 
-checkDone = Potential problems found: {0} (time: {1}ms)
+checkDone = Potential problems found\: {0} (time\: {1}ms)
 
 checkText = &Check Text
 
-correctionMessage = Correction:
+correctionMessage = Correction\:
 
 cs = Czech
 
@@ -43,7 +43,7 @@ de-CH = German (Swiss)
 deactivateRule = (deactivate)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-deactivatedRulesText = <br>Deactivated rules - click to activate again:
+deactivatedRulesText = <br>Deactivated rules - click to activate again\:
 
 desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
@@ -99,17 +99,17 @@ enterText2 = Please insert text to check here
 
 eo = Esperanto
 
-errorContext = Context:
+errorContext = Context\:
 
-errorMessage = Message:
+errorMessage = Message\:
 
 es = Spanish
 
 false_friend = False friend
 
-false_friend_desc = false friend hint for:
+false_friend_desc = false friend hint for\:
 
-false_friend_hint = Hint: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
 false_friend_suggestion = Did you mean {0}?
 
@@ -128,7 +128,7 @@ guiConfigWindowTitle = LanguageTool Options
 guiDemoText = This is a example input to to show you how LanguageTool works.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount = Potential errors:
+guiMatchCount = Potential errors\:
 
 guiMenuAbout = &About...
 
@@ -150,11 +150,11 @@ guiMenuQuit = &Quit
 
 guiMenuShowMainWindow = Open Main Window
 
-guiMotherTongue = Your mother tongue:
+guiMotherTongue = Your mother tongue\:
 
-guiNoErrorsFound = No errors or warnings found (language: {0})
+guiNoErrorsFound = No errors or warnings found (language\: {0})
 
-guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language: {0})
+guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
 
 guiOKButton = &OK
 
@@ -168,7 +168,7 @@ guiOOoIgnoreButton = Ignore
 
 guiOOoOptionsButton = Options...
 
-guiProgressWindowTitle = LanguageTool: Checking Text...
+guiProgressWindowTitle = LanguageTool\: Checking Text...
 
 guiRemoveButton=Remove
 guiReplaceWindowTitle = Replace text
@@ -205,13 +205,13 @@ no_space_before_dot = Don't put a space before the full stop
 
 pl = Polish
 
-repetition = Possible typo: you repeated a word
+repetition = Possible typo\: you repeated a word
 
 result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
 resultAreaText = Results will appear here
 
-resultTime = <br>Time: {0}ms<br>
+resultTime = <br>Time\: {0}ms<br>
 
 ru = Russian
 
@@ -229,7 +229,7 @@ sv = Swedish
 
 tl = Tagalog
 
-textLanguage = Text Language:
+textLanguage = Text Language\:
 
 two_commas = Two consecutive commas
 
@@ -241,13 +241,13 @@ unpaired_brackets = Unpaired bracket or similar symbol
 
 useGUIConfig = Use above settings for the server
 
-whitespace_repetition = Possible typo: you repeated a whitespace
+whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = Romanian
 
 zh = Chinese
 
-moreInfo = More info:
+moreInfo = More info\:
 
 pt = Portuguese
 
@@ -257,6 +257,6 @@ pt-PT = Portuguese (Portugal)
 
 guiWarning = Warning
 
-guiDuplicate = Duplicate rule file!
+guiDuplicate = Duplicate rule file\!
 
 ja = Japanese
