--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
@@ -39,6 +39,12 @@ de-AT = alem\u00e1n (austriaco)
 
 de-CH = alem\u00e1n (suizo)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (desactivar)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Reglas desactivadas - haz clic para volver a activar\:
+
 desc_comma_whitespace = Espacios en blanco antes de coma y antes/despu\u00e9s de parent\u00e9sis
 
 desc_double_punct = Dos puntos o comas consecutivos
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Comprobar si la frase se inicia con una letra may\u00f
 desc_whitespacerepetition = M\u00faltiples espacios en blanco
 
 desc_spelling = Posible error de ortograf\u00eda
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Error de ortograf\u00eda
 
@@ -250,3 +258,5 @@ pt-PT = portugu\u00e9s (Portugal)
 guiWarning = Aviso
 
 guiDuplicate = \u00a1Archivo de reglas duplicado\!
+
+ja = japon\u00e9s
