--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
@@ -39,6 +39,12 @@ de-AT = niemiecki (Austria)
 
 de-CH = niemiecki (Szwajcaria)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (wy\u0142\u0105cz regu\u0142\u0119)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Wy\u0142\u0105czone regu\u0142y - kliknij, aby w\u0142\u0105czy\u0107 ponownie\:
+
 desc_comma_whitespace = Odst\u0119py przed przecinkami oraz przed nawiasami i po nawiasach
 
 desc_double_punct = Podw\u00f3jne kropki lub przecinki
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Test, czy zdanie zaczyna si\u0119 wielk\u0105 liter\u0
 desc_whitespacerepetition = Powt\u00f3rzenie spacji (b\u0142\u0119dne formatowanie)
 
 desc_spelling = Prawdopodobny b\u0142\u0105d pisowni
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = B\u0142\u0119dna pisownia
 
@@ -250,3 +258,5 @@ pt-PT = portugalski (Portugalia)
 guiWarning = Ostrze\u017cenie
 
 guiDuplicate = Wybrany plik regu\u0142 jest ju\u017c za\u0142adowany. Wybierz inny plik regu\u0142.
+
+ja = japo\u0144ski
