--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
@@ -39,6 +39,12 @@ de = German\u0103
 
 # de-CH = German (Swiss)
 
+# deactivate rule with one click (stand-alone GUI):
+# deactivateRule = (deactivate)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+
 desc_comma_whitespace = Spa\u021bii puse \u00eenainte de virgul\u0103 sau \u00eenainte/dup\u0103 paranteze
 
 desc_double_punct = S-au folosit dou\u0103 puncte sau virgule consecutive
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Verific\u0103 dac\u0103 propozi\u021bia \u00eencepe cu
 desc_whitespacerepetition = Spa\u021biu repetat (formatare gre\u0219it\u0103)
 
 # desc_spelling = Possible spelling mistake
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 # desc_spelling_short = Spelling mistake
 
@@ -250,3 +258,5 @@ zh = Chinez\u0103
 # guiWarning = Warning
 
 # guiDuplicate = Duplicate rule file\!
+
+# ja = Japanese
