--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sl.properties
@@ -39,6 +39,12 @@ de-AT = nem\u0161ki (Avstrija)
 
 de-CH = nem\u0161ki (\u0160vica)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (izklju\u010di)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>Izklju\u010dena pravila - kliknite za ponovno vklju\u010ditev\:
+
 desc_comma_whitespace = Uporaba presledka, tabulatorja ali preloma vrstice pred vejico in pred/po oklepaju
 
 desc_double_punct = Uporaba dveh zaporednih pik ali vejic
@@ -62,6 +68,8 @@ desc_uppercase_sentence = Preveri, da se poved za\u010dne z veliko za\u010detnic
 desc_whitespacerepetition = Ponovljen presledek (nepravilno oblikovanje)
 
 desc_spelling = Morebitna napaka pri \u010drkovanju
+
+desc_spelling_no_suggestions = Morebitna \u010drkovalna napaka (brez predlogov)
 
 desc_spelling_short = Napaka pri \u010drkovanju
 
@@ -250,3 +258,5 @@ pt-PT = portugalski (Portugalska)
 guiWarning = Opozorilo
 
 guiDuplicate = Podvojena datoteka s pravili\!
+
+ja = japonski
