--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_uk.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_uk.properties
@@ -39,6 +39,12 @@ de-AT = \u041d\u0456\u043c\u0435\u0446\u044c\u043a\u0430 (\u0410\u0432\u0441\u04
 
 de-CH = \u041d\u0456\u043c\u0435\u0446\u044c\u043a\u0430 (\u0428\u0432\u0435\u0439\u0446\u0430\u0440\u0456\u044f)
 
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (\u043e\u0442\u043a\u043b\u044e\u0447\u0442\u044c)
+
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>\u0412\u0456\u0434\u043a\u043b\u044e\u0447\u0435\u043d\u0456 \u043f\u0440\u0430\u0432\u0438\u043b\u0430 - \u043d\u0430\u0442\u0438\u0441\u043d\u0456\u0442\u044c \u0434\u043b\u044f \u0432\u043a\u043b\u044e\u0447\u0435\u043d\u043d\u044f\:
+
 desc_comma_whitespace = \u0412\u0436\u0438\u0432\u0430\u043d\u043d\u044f \u043f\u0440\u043e\u0433\u0430\u043b\u0438\u043d\u0438 \u043f\u0435\u0440\u0435\u0434 \u043a\u043e\u043c\u043e\u044e \u0442\u0430 \u043f\u0435\u0440\u0435\u0434/\u043f\u0456\u0441\u043b\u044f \u0434\u0443\u0436\u043e\u043a
 
 desc_double_punct = \u0412\u0436\u0438\u0432\u0430\u043d\u043d\u044f \u043f\u043e\u0434\u0432\u0456\u0439\u043d\u0438\u0445 \u043a\u043e\u043c, \u043a\u0440\u0430\u043f\u043e\u043a...
@@ -62,6 +68,8 @@ desc_uppercase_sentence = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u044f\u0454
 desc_whitespacerepetition = \u041f\u043e\u0432\u0442\u043e\u0440 \u043f\u0440\u043e\u0431\u0456\u043b\u0443
 
 desc_spelling = \u041e\u0440\u0444\u043e\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430 \u043f\u043e\u043c\u0438\u043b\u043a\u0430
+
+# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = \u041e\u0440\u0444\u043e\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430 \u043f\u043e\u043c\u0438\u043b\u043a\u0430
 
@@ -250,3 +258,5 @@ pt-PT = \u041f\u043e\u0440\u0442\u0443\u0433\u0430\u043b\u044c\u0441\u044c\u043a
 guiWarning = \u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435
 
 guiDuplicate = \u0414\u0443\u0431\u043b\u044e\u0432\u0430\u0442\u0438 \u043f\u0440\u0430\u0432\u0438\u043b\u043e \u0444\u0430\u0439\u043b\!
+
+ja = \u042f\u043f\u043e\u043d\u0441\u044c\u043a\u0438\u0439
