partial bugfix for sourceforge bug 3555372: don't remove XML/HTML elements unless the new --xmlfilter option is set

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -40,6 +40,10 @@ LanguageTool Change Log
    -Support for Swedish has been re-enabled after it had been disabled in LanguageTool 1.7.
 
 
+ -bugfix for command line: We removed XML from even plain text input. Now XML/HTML elements
+  are only filtered out if the new --xmlfilter option is specified. Note that there's still
+  a bug that can screw up position information with that option.
+
  -introduced a file resources/<lang>/hunspell/ignore.txt with words that the spell checker
   will ignore
 
