--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -58,11 +58,13 @@ LanguageTool Change Log
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
 
+ -stand-alone GUI: copy and paste from the result area now keeps line breaks (Sourceforge
+  bug #3554842)
+
  -HTTP API: "+" was incorrectly removed from input (Sourceforge bug #3543914), patch by
   Sourceforge user hiddenspirit
 
- -stand-alone GUI: copy and paste from the result area now keeps line breaks (Sourceforge
-  bug #3554842)
+ -HTTP API: the XML output has been extended to include the category of the match
 
 
 1.8 (2012-06-30)
