- The word tokenizer now considers the pipe | and backtick ` characters   as word separators.  I intended to make the star * as word separator too   but it would currently break 2 rules: German rule LEERZEICHEN_RECHENZEICHEN   and Italian rule GR_09.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -66,6 +66,8 @@ LanguageTool Change Log
 
  -HTTP API: the XML output has been extended to include the category of the match
 
+ -The word tokenizer now considers the following characters as word separator: | (pipe)
+  and` (backtick).
 
 1.8 (2012-06-30)
 
