change XML output to include the software (always "LanguageTool"), the version, and the build date

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -64,7 +64,8 @@ LanguageTool Change Log
  -HTTP API: "+" was incorrectly removed from input (Sourceforge bug #3543914), patch by
   Sourceforge user hiddenspirit
 
- -HTTP API: the XML output has been extended to include the category of the match
+ -HTTP API and XML output: extended XML to include the version and build date
+  of LanguageTool and the category of each match
 
  -The word tokenizer now considers the following characters as word separator: | (pipe)
   and` (backtick).
