bugfix: the column count was sometimes totally wrong

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -70,6 +70,9 @@ LanguageTool Change Log
  -The word tokenizer now considers the following characters as word separator: | (pipe)
   and` (backtick).
 
+ -bugfix: the column count was sometimes totally wrong
+
+
 1.8 (2012-06-30)
 
  -Greek:
