mention sourceforge bug number for latest fix

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -70,7 +70,7 @@ LanguageTool Change Log
  -The word tokenizer now considers the following characters as word separator: | (pipe)
   and` (backtick).
 
- -bugfix: the column count was sometimes totally wrong
+ -bugfix: the column count was sometimes totally wrong (Sourceforge bug #3557738)
 
 
 1.8 (2012-06-30)
