[eo] added links to REVO (Reta Vortaro, http://www.reta-vortaro.de/revo/)      with permission from Wolfram Diestel.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -19,6 +19,7 @@ LanguageTool Change Log
  -Esperanto:
    -several new rules and fixed false alarms
    -updated list of transitive/nontransitive verbs
+   -added <url> links to REVO (Reta Vortaro) with permission from Wolfram Diestel.
 
  -French:
    -several new rules and fixed false alarms
