[da] many new Danish rules, a disambiguator, and a new dictionary by Henrik Bendt

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -40,6 +40,9 @@ LanguageTool Change Log
  -Swedish:
    -Support for Swedish has been re-enabled after it had been disabled in LanguageTool 1.7.
 
+ -Danish:
+   -major update to the dictionary and the rules (Henrik Bendt)
+
 
  -bugfix for command line: We removed XML from even plain text input. Now XML/HTML elements
   are only filtered out if the new --xmlfilter option is specified. Note that there's still
