[ru] 2 new rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -6,7 +6,9 @@ LanguageTool Change Log
    -initial support (Takahiro Shinkai, Maxim Mozgovoy's student)
 
  -Russian:
-   -small rules updates
+   -rules updates
+   -several new rules
+   -improve user interface translation 
 
  -Breton:
    -several new rules and fixed false alarms
