--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -48,7 +48,7 @@ LanguageTool Change Log
 
  -bugfix for command line: We removed XML from even plain text input. Now XML/HTML elements
   are only filtered out if the new --xmlfilter option is specified. Note that there's still
-  a bug that can screw up position information with that option.
+  a bug that can screw up position information with that option, thus it is deprecated.
 
  -introduced a file resources/<lang>/hunspell/ignore.txt with words that the spell checker
   will ignore
