command line: new option "--list" to list all available languages

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -50,6 +50,8 @@ LanguageTool Change Log
   are only filtered out if the new --xmlfilter option is specified. Note that there's still
   a bug that can screw up position information with that option, thus it is deprecated.
 
+ -command line: new option "--list" to list all available languages
+
  -introduced a file resources/<lang>/hunspell/ignore.txt with words that the spell checker
   will ignore
 
