fix sf bug #3560925

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -44,6 +44,9 @@ LanguageTool Change Log
 
  -Danish:
    -major update to the dictionary and the rules (Henrik Bendt)
+   
+ -Polish
+   -fixed bug with the word repetition rule (sf bug #3560925)
 
 
  -bugfix for command line: We removed XML from even plain text input. Now XML/HTML elements
