extend the HTTP XML output for the "/Languages" URL to also contain the language code with its variant

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -75,6 +75,11 @@ LanguageTool Change Log
  -HTTP API: "+" was incorrectly removed from input (Sourceforge bug #3543914), patch by
   Sourceforge user hiddenspirit
 
+ -HTTP API: the XML returned by the "/Languages" URL (which returns a list of all supported
+  languages) has been extended to contain an 'abbrWithVariant' attribute which lists the
+  language with its variant, e.g.:
+  <language name="Catalan" abbr="ca" abbrWithVariant="ca-ES"/>
+
  -HTTP API and XML output: extended XML to include the version and build date
   of LanguageTool and the category of each match
 
