HTTP API: small internal cleanup for better exception and charset handling (always expects UTF-8)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -80,6 +80,9 @@ LanguageTool Change Log
   language with its variant, e.g.:
   <language name="Catalan" abbr="ca" abbrWithVariant="ca-ES"/>
 
+ -HTTP API: small internal cleanup for better exception and charset handling (always
+  expects UTF-8)
+
  -HTTP API and XML output: extended XML to include the version and build date
   of LanguageTool and the category of each match
 
