--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -83,6 +83,11 @@ LanguageTool Change Log
  -HTTP API: small internal cleanup for better exception and charset handling (always
   expects UTF-8)
 
+ -HTTP API: the embedded HTTP can now be started with a "--public" parameter so
+  it can be accessed from anywhere (not just localhost). Please be careful with this
+  option, it is not recommended for production use yet:
+  java -cp LanguageTool.jar org.languagetool.server.HTTPServer --public
+
  -HTTP API and XML output: extended XML to include the version and build date
   of LanguageTool and the category of each match
 
