[fr] updated POS tag dictionary 'french.dict' to dicollecte-4.6.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -24,6 +24,7 @@ LanguageTool Change Log
    -added <url> links to REVO (Reta Vortaro) with permission from Wolfram Diestel.
 
  -French:
+   -updated POS tag dictionary to use Dicollecte-4.6
    -several new rules and fixed false alarms
    -opening guillemet (U+00AB) followed by thin no-break
     space (U+202F) wrongly detected as error (sf bug #3545050)
