adding offset (i.e. character count at which the error starts) to XML output, this is often easier to use for applications than row/column based values

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -90,7 +90,7 @@ LanguageTool Change Log
   java -cp LanguageTool.jar org.languagetool.server.HTTPServer --public
 
  -HTTP API and XML output: extended XML to include the version and build date
-  of LanguageTool and the category of each match
+  of LanguageTool and the category and offset of each match
 
  -The word tokenizer now considers the following characters as word separator: | (pipe)
   and` (backtick).
