latest i18n data from transifex

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Repetici\u00f3n d'espacios
 
 desc_spelling = Posible fallu d'ortograf\u00eda
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Posible fallu d'ortograf\u00eda (ensin suxerencies)
 
 desc_spelling_short = Fallu d'ortograf\u00eda
 
