--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -40,10 +40,10 @@ de-AT = Alamaneg (Aostria)
 de-CH = Alamaneg (Suis)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (diweredekaat)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Reolenno\u00f9 diweredekaet - klika\u00f1 evit adweredekaat \:
 
 desc_comma_whitespace = Esaouenn dirak \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb pe goude \u00ab\u00a0(\u00a0\u00bb
 
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Meur a esaouenn wenn (furmad fall)
 
 desc_spelling = Ur fazi reizhskriva\u00f1 a c'hall beza\u00f1
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Fazi skriva\u00f1 posupl (kinnig ebet)
 
 desc_spelling_short = Fazi reizhskriva\u00f1
 
