--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -40,10 +40,10 @@ de-AT = alemany (austr\u00edac)
 de-CH = alemany (su\u00eds)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (desactiva)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Regles desactivades - feu clic per a activar-les de nou\:
 
 desc_comma_whitespace = Espais abans de coma i abans i despr\u00e9s dels par\u00e8ntesis
 
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Repetici\u00f3 d'espais en blanc (formataci\u00f3 in
 
 desc_spelling = Possible error ortogr\u00e0fic
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Possible error ortogr\u00e0fic (sense suggeriments)
 
 desc_spelling_short = Error ortogr\u00e0fic
 
@@ -259,4 +259,4 @@ guiWarning = Av\u00eds
 
 guiDuplicate = Fitxer de regles duplicat\!
 
-# ja = Japanese
+ja = japon\u00e8s
