--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Gentagende mellemrum (d\u00e5rlig formatering)
 
 desc_spelling = Mulig stavefejl
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Mulig stavefejl (uden forslag)
 
 desc_spelling_short = Stavefejl
 
