--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = \u0395\u03c0\u03b1\u03bd\u03ac\u03bb\u03b7\u03c8\u03
 
 desc_spelling = \u03a0\u03b9\u03b8\u03b1\u03bd\u03cc \u03bf\u03c1\u03b8\u03bf\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = \u03c0\u03b9\u03b8\u03b1\u03bd\u03cc \u03bf\u03c1\u03b8\u03bf\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2
 
 desc_spelling_short = \u039f\u03c1\u03b8\u03bf\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2
 
