--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = M\u00faltiples espazos en branco (erro de formato)
 
 desc_spelling = Pos\u00edbel erro ortogr\u00e1fico
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Pos\u00edbel erro ortogr\u00e1fico (sen suxesti\u00f3ns)
 
 desc_spelling_short = Erro ortogr\u00e1fico
 
