--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_km.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = \u1798\u17b6\u1793\u200b\u178a\u1780\u1783\u17d2\u17
 
 desc_spelling = \u17a2\u17b6\u1785\u1798\u17b6\u1793\u1780\u17b6\u179a\u1794\u17d2\u179a\u1780\u1794\u178a\u17c2\u179b\u1798\u17b6\u1793\u1780\u17c6\u17a0\u17bb\u179f
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = \u1798\u17b6\u1793\u200b\u1780\u17c6\u17a0\u17bb\u179f\u200b\u1794\u17d2\u179a\u1780\u1794(\u178a\u17c4\u1799\u200b\u1782\u17d2\u1798\u17b6\u1793\u1780\u17b6\u179a\u200b\u178e\u17c2\u1793\u17b6\u17c6\u200b)
 
 desc_spelling_short = \u1794\u17d2\u179a\u1780\u1794\u1798\u17b6\u1793\u1780\u17c6\u17a0\u17bb\u179f
 
