--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_uk.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_uk.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = \u041f\u043e\u0432\u0442\u043e\u0440 \u043f\u0440\u0
 
 desc_spelling = \u041e\u0440\u0444\u043e\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430 \u043f\u043e\u043c\u0438\u043b\u043a\u0430
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = \u041e\u0440\u0444\u043e\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430 \u043f\u043e\u043c\u0438\u043b\u043a\u0430 (\u0431\u0435\u0437 \u0432\u0438\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u044c)
 
 desc_spelling_short = \u041e\u0440\u0444\u043e\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430 \u043f\u043e\u043c\u0438\u043b\u043a\u0430
 
