--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = \u041f\u0430\u045e\u0442\u0430\u0440\u044d\u043d\u04
 
 desc_spelling = \u0410\u0440\u0444\u0430\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430\u044f \u043f\u0430\u043c\u044b\u043b\u043a\u0430
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = \u0410\u0440\u0444\u0430\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430\u044f \u043f\u0430\u043c\u044b\u043b\u043a\u0430 (\u0431\u0435\u0437 \u0432\u044b\u043f\u0440\u0430\u045e\u043b\u0435\u043d\u043d\u044f\u045e)
 
 desc_spelling_short = \u0410\u0440\u0444\u0430\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0430\u044f \u043f\u0430\u043c\u044b\u043b\u043a\u0430
 
