--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -40,10 +40,10 @@ de-AT = Deutsch (\u00d6sterreich)
 de-CH = Deutsch (Schweiz)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (deaktivieren)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Deaktivierte Regeln - klicken, um sie wieder zu aktivieren\:
 
 desc_comma_whitespace = Leerzeichen vor/hinter Kommas und Klammern
 
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Wiederholung von Leerzeichen
 
 desc_spelling = M\u00f6glicher Rechtschreibfehler
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = M\u00f6gliche Tippfehler (ohne Korrekturvorschl\u00e4ge)
 
 desc_spelling_short = Rechtschreibfehler
 
@@ -259,4 +259,4 @@ guiWarning = Warnung
 
 guiDuplicate = Doppelte Regel-Datei\!
 
-# ja = Japanese
+ja = Japanisch
