--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -69,7 +69,7 @@ desc_whitespacerepetition = M\u00faltiples espacios en blanco
 
 desc_spelling = Posible error de ortograf\u00eda
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Posible error de ortograf\u00eda (sin sugerencias)
 
 desc_spelling_short = Error de ortograf\u00eda
 
