add change logs for Chinese

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -49,6 +49,9 @@ LanguageTool Change Log
  -Polish
    -fixed bug with the word repetition rule (sf bug #3560925)
 
+ -Chinese:
+   -hundreds of new Chinese rules (Tao Lin)
+   -unit tests for the Chinese tokenizer and tagger
 
  -bugfix for command line: We removed XML from even plain text input. Now XML/HTML elements
   are only filtered out if the new --xmlfilter option is specified. Note that there's still
