[ca] New rules, fixed false alarms, several rules rearranged.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -17,6 +17,10 @@ LanguageTool Change Log
     hyphenated words).
   - updated classification of words tagged as plural nouns of persons
     (these have different mutation than other nouns).
+    
+ -Catalan:
+   -several new rules
+   -fixed false alarms
 
  -Esperanto:
    -several new rules and fixed false alarms
