--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -40,10 +40,10 @@ de-AT = Duits (Oostenrijk)
 de-CH = Duits (Zwitserland)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (uitschakelen)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Uitgeschakelde regels - klik aan om weer in te schakelen\:
 
 desc_comma_whitespace = Spatie voor of achter haakje
 
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Te veel witruimte tussen woorden
 
 desc_spelling = Waarschijnlijk een spelfout
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Mogelijke spelfouten (zonder suggesties)
 
 desc_spelling_short = Spelling onjuist
 
@@ -259,4 +259,4 @@ guiWarning = Waarschuwing
 
 guiDuplicate = Bestand met regels is al geladen
 
-# ja = Japanese
+ja = Japans
