--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_zh.properties
@@ -40,10 +40,10 @@ de-AT = \u5fb7\u8bed(\u5965\u5730\u5229)
 de-CH = \u5fb7\u8bed(\u745e\u58eb)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (\u4f7f\u65e0\u6548)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>\u65e0\u6548\u7684\u89c4\u5219 - \u70b9\u51fb\u4f7f\u4e4b\u518d\u6b21\u6709\u6548\uff1a
 
 desc_comma_whitespace = \u5728\u9017\u53f7\u524d\u548c\u62ec\u53f7\u524d/\u540e\u4f7f\u7528\u7a7a\u683c
 
@@ -69,7 +69,7 @@ desc_whitespacerepetition = \u7a7a\u683c\u91cd\u590d(\u9519\u8bef\u7684\u683c\u5
 
 desc_spelling = \u53ef\u80fd\u7684\u62fc\u5199\u9519\u8bef
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = \u53ef\u80fd\u7684\u62fc\u5199\u9519\u8bef(\u6ca1\u6709\u4fee\u6539\u5efa\u8bae)
 
 desc_spelling_short = \u62fc\u5199\u9519\u8bef
 
@@ -259,4 +259,4 @@ guiWarning = \u8b66\u544a
 
 guiDuplicate = \u91cd\u590d\u89c4\u5219\u6587\u4ef6\!
 
-# ja = Japanese
+ja = \u65e5\u8bed
