upgrade to jwordpslitter 3.4 - adds some exceptions to avoid false alarms, also needed to make a clean Maven-based release

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -38,8 +38,7 @@ LanguageTool Change Log
 
  -German:
    -added simple verb/subject agreement checker
-   -fixed some false alarms by upgrading to the 2012-07-20 snapshot of jwordsplitter
-    (sf bug #3475553)
+   -fixed some false alarms by upgrading to jwordsplitter 3.4 (sf bug #3475553)
 
  -Portuguese:
    -several rule updates (Marco A.G.Pinto)
